# server/app/blocks.go
@@ -12,20 +12,19 @@ import (
 
 var ErrBlocksFromMultipleBoards = errors.New("the block set contain blocks from multiple boards")
 
-func (a *App) GetBlocks(boardID, parentID string, blockType string) ([]*model.Block, error) {
+func (a *App) GetBlocks(boardID, parentID string, blockType string, page, perPage int) ([]*model.Block, error) {
 	if boardID == "" {
 		return []*model.Block{}, nil
 	}
 
-	if blockType != "" && parentID != "" {
-		return a.store.GetBlocksWithParentAndType(boardID, parentID, blockType)
+	opts := model.QueryBlocksOptions{
+		BoardID:   boardID,
+		ParentID:  parentID,
+		BlockType: model.BlockType(blockType),
+		Page:      page,
+		PerPage:   perPage,
 	}
-
-	if blockType != "" {
-		return a.store.GetBlocksWithType(boardID, blockType)
-	}
-
-	return a.store.GetBlocksWithParent(boardID, parentID)
+	return a.store.GetBlocks(opts)
 }
 
 func (a *App) DuplicateBlock(boardID string, blockID string, userID string, asTemplate bool) ([]*model.Block, error) {
